<resources>
    <string name="app_name">EcoRecicla</string>
    <string name="close">Cerrar</string>
    <string name="termsCond">Términos y Condiciones de Uso</string>
    <string name="bodyTermyCon">Bienvenido a ECORecicla ("la Aplicación"). Antes de utilizar nuestra aplicación, por favor, lee detenidamente estos términos y condiciones.
\n1. Almacenamiento de Datos del Usuario:
\nLa Aplicación puede almacenar datos personales proporcionados por el usuario con el único propósito de mejorar la experiencia de reciclaje y proporcionar servicios personalizados. Estos datos se almacenan de forma segura en nuestros servidores y nunca serán recopilados, compartidos ni vendidos a terceros de ninguna manera.
\n2. Consentimiento del Usuario:
\nAl utilizar la Aplicación, el usuario otorga su consentimiento para el almacenamiento de datos personales según lo establecido en estos términos y condiciones. El usuario tiene el derecho de retirar su consentimiento en cualquier momento desinstalando la aplicación.
\n3. Seguridad de los Datos:
\nNos comprometemos a tomar medidas razonables para garantizar la seguridad de los datos del usuario. Sin embargo, no podemos garantizar la seguridad completa y no nos hacemos responsables de cualquier acceso no autorizado o divulgación de datos que esté fuera de nuestro control.
\n4. Uso Responsable:
\nEl usuario se compromete a utilizar la Aplicación de manera responsable y a respetar la privacidad de otros usuarios. Cualquier uso indebido o violación de estos términos y condiciones puede resultar en la suspensión o eliminación de la cuenta del usuario.
\n5. Modificaciones de Términos y Condiciones:
\nNos reservamos el derecho de modificar estos términos y condiciones en cualquier momento. Los cambios entrarán en vigencia después de su publicación en la Aplicación. Se alienta a los usuarios a revisar regularmente estos términos.
\n6. Contacto:
\nPara cualquier pregunta o inquietud relacionada con estos términos y condiciones, por favor, contáctenos a través de ecorecycla@gmail.com.
\nAl utilizar la Aplicación, aceptas y comprendes estos términos y condiciones. Si no estás de acuerdo con alguno de estos términos, te recomendamos que no utilices la Aplicación.
\nFecha de entrada en vigor: Enero de 2024</string>
    <string name="categories">Categorías</string>
    <string name="plastic">Plástico</string>
    <string name="paper">Papel</string>
    <string name="electronic">Electrónicos</string>
    <string name="glass">Vidrio</string>
    <string name="cardboard">Cartón</string>
    <string name="steel">Metal</string>
    <string name="textiles">Textiles</string>
    <string name="batteries">Baterías</string>
    <string name="artHome">Art. Hogar</string>
    <string name="slogan">\"Recicla y da luz verde al planeta\"</string>
    <string name="midTitle">Recicla</string>
    <string name="newEntry">Nueva Entrada</string>
    <string name="kg">Kg</string>
    <string name="it1">Cantidad en Kg</string>
    <string name="tvDw1">Tipo de plástico</string>
    <string name="tv2">Fecha de recolección</string>
    <string name="dateFormat">DD/MM/AAAA</string>
    <string name="tv3">Valor por Kg</string>
    <string name="dollarSymbol">$</string>
    <string name="saveData">Guardar datos</string>
    <string name="dd1">Selecciona un tipo</string>
    <string name="tip">Tips</string>
    <string name="forguetPass">¿Olvidó su contraseña?</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="welcome">¡Bienvenido (a)!</string>
    <string name="noAccount">¿No tienes una cuenta?</string>
    <string name="login">Ingresar</string>
    <string name="signUp">Registrate</string>
    <string name="look">Ver</string>
    <string name="stats">Estadisticas</string>
    <string name="tvBodyTip1">Aprende sobre los tipos de plástico que se pueden reciclar en tu área, las regulaciones locales de reciclaje y cómo preparar adecuadamente los materiales para su reciclaje.</string>
    <string name="tvTitleTip1">Educate a ti mismo</string>
    <string name="tvBodyTip2">Clasifica los plásticos según su tipo (utilizando los códigos de reciclaje numérico) y colócalos en contenedores separados. Esto facilitará el proceso de reciclaje.</string>
    <string name="tvTitletip2">Identifica y separa</string>
    <string name="tvBodyTip3">Asegúrate de que los plásticos estén limpios y secos antes de ponerlos en los contenedores de reciclaje. La contaminación por alimentos o líquidos puede dificultar el proceso de reciclaje.</string>
    <string name="tvTitle3">Lava y seca</string>
    <string name="tvTitle4">Reducción de consumo</string>
    <string name="tvBody4">Reduce la cantidad de plásticos que consumes. Opta por productos reutilizables en lugar de productos desechables siempre que sea posible.</string>
    <string name="loginVar1">Inicia Sesión</string>
    <string name="rememberPass">¿Recordaste tu contraseña?</string>
    <string name="sendRecoveryEmail">Enviar correo de recuperación</string>
    <string name="recoveryBody">Por favor, intruzca la dirección de correo electrónico que utilizó para registrarse. Recibirá un enlace para restablecer su contraseña</string>
    <string name="recoveryPass">Restablecer contraseña</string>
    <string name="signUpVar1">Registro</string>
    <string name="userName">Nombre de usuario</string>
    <string name="confirmPass">Confirmar contraseña</string>
    <string name="termnsConditions">Acepta terminos y condiciones</string>
    <string name="signUpvar2">Registrarte</string>
    <string name="haveAccount">¿Ya tienes una cuenta?</string>
    <string name="RecyDay">Reciclado día</string>
    <string name="valRecyDay">4.5 Kg</string>
    <string name="recyMonth">Reciclado mes</string>
    <string name="valueRecyMonth">10.5 Kg</string>
    <string name="monthObject">Objetivo mes</string>
    <string name="valueMonthObject">20 Kg</string>
    <string name="missingMonth">Faltante mes</string>
    <string name="valueMissingMonth">9.5 Kg</string>
    <string name="details">Detalles</string>
    <string name="date">Fecha</string>
    <string name="numKg">CANTIDAD KG</string>
    <string name="valKg">VALOR KG</string>
    <string name="valTotal">VALOR TOTAL</string>
    <string name="date1">Enero 15 2023</string>
    <string name="numKg1">20</string>
    <string name="valKg1">200</string>
    <string name="valTotal1">4000</string>
    <string name="date2">Enero 20 2023</string>
    <string name="numKg2">50</string>
    <string name="valKg2">200</string>
    <string name="valTotal2">10000</string>
    <string name="date3">Marzo 20 2023</string>
    <string name="numKg3">30</string>
    <string name="valKg3">200</string>
    <string name="valTotal3">6000</string>
    <string name="date4">Abril 22 2023</string>
    <string name="numKg4">40</string>
    <string name="valKg4">200</string>
    <string name="valTotal4">8000</string>
    <string name="date5">Mayo 20 2023</string>
    <string name="numKg5">10</string>
    <string name="valKg5">200</string>
    <string name="valTotal5">2000</string>
    <string name="date6">Junio 12 2023</string>
    <string name="numKg6">80</string>
    <string name="valKg6">200</string>
    <string name="valTotal6">16000</string>
    <string name="date7">Julio 02 2023</string>
    <string name="numKg7">60</string>
    <string name="valKg7">200</string>
    <string name="valTotal7">12000</string>
    <string name="totals">TOTALES</string>
    <string name="numKgTotal">290</string>
    <string name="valKgTotal">200</string>
    <string name="valTotalSum">58000</string>
    <string name="daysOff">Días restantes de los tip:</string>
    <string name="valDaysOff">0</string>
    <string name="messageProfile">\" Entuciasta del reciclaje \"</string>
    <string name="profile">Perfil</string>
    <string name="you">Tu</string>
    <string name="passRegex">^(?=.*[A-Za-z])(?=.*\\d)[A-Za-z\\d]{8,}$</string>
    <string name="credential">Nombre de usuario o correo electrónico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>