<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsDetailActivity">

    <include
        android:id="@+id/appLogo"
        layout="@layout/app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        style="@style/ButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleDatail"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plastic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appLogo" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDatail">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/colorOnSecondary">

                <TextView
                    android:id="@+id/tvDate"
                    style="@style/TitleTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/tvCantidad"
                    style="@style/TitleTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/numKg" />

                <TextView
                    android:id="@+id/tvValorKg"
                    style="@style/TitleTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valKg" />

                <TextView
                    android:id="@+id/tvValorTotal"
                    style="@style/TitleTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valTotal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryContainer">

                <TextView
                    android:id="@+id/tv11"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:text="@string/date1"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/tv21"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/numKg1" />

                <TextView
                    android:id="@+id/tv31"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valKg1" />

                <TextView
                    android:id="@+id/tv41"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valTotal1" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryContainer">

                <TextView
                    android:id="@+id/tv12"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:text="@string/date2"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/tv22"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/numKg2" />

                <TextView
                    android:id="@+id/tv32"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valKg2" />

                <TextView
                    android:id="@+id/tv42"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valTotal2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="4dp"
                android:background="@color/colorPrimaryContainer">

                <TextView
                    android:id="@+id/tv13"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date3"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/tv23"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/numKg3" />

                <TextView
                    android:id="@+id/tv33"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valKg3" />

                <TextView
                    android:id="@+id/tv43"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valTotal3" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryContainer">

                <TextView
                    android:id="@+id/tv14"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:text="@string/date4"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/tv24"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/numKg4" />

                <TextView
                    android:id="@+id/tv34"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valKg4" />

                <TextView
                    android:id="@+id/tv44"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valTotal4" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryContainer">

                <TextView
                    android:id="@+id/tv15"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:text="@string/date5"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/tv25"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/numKg5" />

                <TextView
                    android:id="@+id/tv35"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valKg5" />

                <TextView
                    android:id="@+id/tv45"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valTotal5" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryContainer">

                <TextView
                    android:id="@+id/tv16"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:text="@string/date6"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/tv26"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/numKg6" />

                <TextView
                    android:id="@+id/tv36"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valKg6" />

                <TextView
                    android:id="@+id/tv46"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valTotal6" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryContainer">

                <TextView
                    android:id="@+id/tv1"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:text="@string/date7"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/tv2"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/numKg7" />

                <TextView
                    android:id="@+id/tv3"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valKg7" />

                <TextView
                    android:id="@+id/tv4"
                    style="@style/ContentTableStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valTotal7" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorOnSecondary">

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/totals"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvTotalCantidad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/numKgTotal"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvTotalValorKg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/valKgTotal"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvTotalValorTotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/valTotalSum"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </TableRow>

        </TableLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>