<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.CategoriesFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCategory"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categories" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/glCategories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:columnCount="3"
        app:rowCount="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlastic"
            style="@style/ButtonCategoriesStyle"
            android:text="@string/plastic"
            app:icon="@drawable/ic_plastic"
            app:layout_column="0"
            app:layout_row="0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPaper"
            style="@style/ButtonCategoriesStyle"
            android:text="@string/paper"
            app:icon="@drawable/ic_paper"
            app:layout_column="1"
            app:layout_row="0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnElectronics"
            style="@style/ButtonCategoriesStyle"
            android:text="@string/electronic"
            app:icon="@drawable/ic_electronic"
            app:layout_column="2"
            app:layout_row="0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGlass"
            style="@style/ButtonCategoriesStyle"
            android:text="@string/glass"
            app:icon="@drawable/ic_glass"
            app:layout_column="0"
            app:layout_row="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCard"
            style="@style/ButtonCategoriesStyle"
            android:text="@string/cardboard"
            app:icon="@drawable/ic_card"
            app:layout_column="1"
            app:layout_row="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSteel"
            style="@style/ButtonCategoriesStyle"
            android:text="@string/steel"
            app:icon="@drawable/ic_steel"
            app:layout_column="2"
            app:layout_row="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTexiles"
            style="@style/ButtonCategoriesStyle"
            android:text="@string/textiles"
            app:icon="@drawable/ic_textil"
            app:layout_column="0"
            app:layout_row="2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBatteries"
            style="@style/ButtonCategoriesStyle"
            android:text="@string/batteries"
            app:icon="@drawable/ic_batteries"
            app:layout_column="1"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>